<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:minWidth="25px"
        android:minHeight="25px"
        android:background="#DCDCDC"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/titleHrest"
            android:layout_height="32dp"
            android:layout_width="match_parent"
            android:text="@string/titulo_dialog"
            android:textSize="20dp"
            android:textColor="#FFFFFF"
            android:paddingTop="4dp"
            android:background="#006400"
            android:typeface="sans"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/tvService"
            android:layout_below="@+id/tvService"
            android:layout_height="25dp"
            android:layout_width="170dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:text="@string/service_xml"
            android:singleLine="false"
            android:textColor="#000000"
            android:textSize="14dp"
            android:paddingLeft="5dp"
            android:paddingTop="2dp"
            android:typeface="sans" />
        <EditText
            android:id="@+id/txtService"
            android:layout_below="@+id/tvService"
            android:layout_height="28dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:hint="@string/titulo_service_model"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"
            android:paddingLeft="5dp"
            android:paddingTop="1dp"
            android:textSize="14dp"
            android:paddingBottom="1dp"
            android:typeface="sans"
            android:layout_marginRight="20dp" />

    </LinearLayout>
</ScrollView>
