<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:minHeight="40px"
        android:minWidth="40px"
        android:background="#DCDCDC"
        android:orientation="vertical">


        <TextView
            android:layout_height="32dp"
            android:layout_width="match_parent"
            android:text="@string/title_operation"
            android:textSize="20dp"
            android:textColor="#FFFFFF"
            android:paddingTop="4dp"
            android:background="#006400"
            android:typeface="sans"
            android:textStyle="bold"
            android:gravity="center" />


        <TextView
            android:id="@+id/tvOperation"
            android:layout_below="@+id/txtOperation"
            android:layout_height="25dp"
            android:layout_width="170dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:text="@string/nome_operation"
            android:textColor="#000000"
            android:textSize="14dp"
            android:paddingLeft="5dp"
            android:paddingTop="2dp"
            android:typeface="sans" />

        <EditText
            android:id="@+id/txtOperation"
            android:layout_below="@+id/tvOperation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginLeft="20dp"
            android:text=""
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"
            android:paddingLeft="5dp"
            android:paddingTop="1dp"
            android:textSize="14dp"
            android:paddingBottom="1dp"
            android:typeface="sans"
            android:layout_marginRight="20dp" />

        <TextView
            android:id="@+id/tvTipoOperation"
            android:layout_below="@+id/txtOperation"
            android:layout_height="25dp"
            android:layout_width="170dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:text="@string/tipo_operation"
            android:textColor="#000000"
            android:textSize="14dp"
            android:paddingLeft="5dp"
            android:paddingTop="2dp"
            android:typeface="sans" />

        <EditText
            android:id="@+id/txtTipoOperation"
            android:layout_below="@+id/tvTipoOperation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginLeft="20dp"
            android:text=""
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"
            android:paddingLeft="5dp"
            android:paddingTop="1dp"
            android:textSize="14dp"
            android:paddingBottom="1dp"
            android:typeface="sans"
            android:layout_marginRight="20dp" />


        <TextView
            android:id="@+id/tvEntradaSaida"
            android:layout_below="@+id/txtTipoOperation"
            android:layout_height="25dp"
            android:layout_width="170dp"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="120dp"
            android:text="@string/tipo_i_o_operation"
            android:textColor="#000000"
            android:textSize="14dp"
            android:paddingLeft="5dp"
            android:paddingTop="2dp"
            android:typeface="sans" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input_operation"
                    android:checked="true"
                    />
                <RadioButton
                    android:id="@+id/radio_output"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/output_operation"

                    
                     />
            <RadioButton
                android:id="@+id/radio_ambos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ambos_operation"

                />
        </RadioGroup>

        <TextView
            android:id="@+id/tvParamOperation"
            android:layout_below="@+id/txtOperation"
            android:layout_height="25dp"
            android:layout_width="170dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:text="@string/operation_param"
            android:textColor="#000000"
            android:textSize="14dp"
            android:paddingLeft="5dp"
            android:paddingTop="2dp"
            android:typeface="sans" />

        <EditText
            android:id="@+id/txtParamOperation"
            android:layout_below="@+id/tvOperationSaidaEntrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginLeft="20dp"
            android:text=""
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"
            android:paddingLeft="5dp"
            android:paddingTop="1dp"
            android:textSize="14dp"
            android:paddingBottom="1dp"
            android:typeface="sans"
            android:layout_marginRight="20dp" />

        <!-- Dinâmico   -->


        <TextView
            android:id="@+id/tvOperationEntrada"
            android:layout_below="@+id/txtOperation"
            android:layout_height="25dp"
            android:layout_width="170dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:text="@string/input_operation"
            android:textColor="#000000"
            android:textSize="14dp"
            android:paddingLeft="5dp"
            android:paddingTop="2dp"
            android:typeface="sans" />

        <EditText
            android:id="@+id/txtInputOperation"
            android:layout_below="@+id/tvOperationEntrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginLeft="20dp"
            android:text=""
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"
            android:paddingLeft="5dp"
            android:paddingTop="1dp"
            android:textSize="14dp"
            android:paddingBottom="1dp"
            android:typeface="sans"
            android:layout_marginRight="20dp" />


        <TextView
            android:id="@+id/tvOperationSaida"
            android:layout_below="@+id/txtOperation"
            android:layout_height="25dp"
            android:layout_width="170dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:text="@string/output_operation"
            android:textColor="#000000"
            android:textSize="14dp"
            android:paddingLeft="5dp"
            android:paddingTop="2dp"
            android:typeface="sans" />

        <EditText
            android:id="@+id/txtOutputOperation"
            android:layout_below="@+id/tvOperationSaida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginLeft="20dp"
            android:text=""
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"
            android:paddingLeft="5dp"
            android:paddingTop="1dp"
            android:textSize="14dp"
            android:paddingBottom="1dp"
            android:typeface="sans"
            android:layout_marginRight="20dp" />

    </LinearLayout>




</ScrollView>

